--- a/setup.cfg
+++ b/setup.cfg
@@ -41,10 +41,10 @@ source-dir = doc/source
 
 [compile_catalog]
 directory = keystone/locale
-domain = keystone
+account = keystone
 
 [update_catalog]
-domain = keystone
+account = keystone
 output_dir = keystone/locale
 input_file = keystone/locale/keystone.pot
 
