LOGGING: enable request_id
Change-Id: I6e211867d05366346fd1b51532b66c938fee4fd1

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ python-oslo-middleware>=1.0.0
 python-oslo-policy>=0.3.1
 python-oslo-serialization>=1.4.0
 python-oslo-utils>=1.4.0
+python-oslo-context>=0.2.0
 python-pam>=0.1.4
 python-passlib
 python-paste
